--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.11",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.534.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
